--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,17 @@
 name = "yassgy"
 version = "0.1.0"
 edition = "2018"
+license = "MIT"
+description = "A static site generator"
+repository = "https://github.com/JerryHue/yassgy/"
+keywords = ["ssg", "cli"]
+exclude = [
+    "testfiles/*",
+    "tests/*",
+    ".vscode",
+    "rustfmt.toml",
+    ".git*"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
